# UU-nomad-plugin-images

./: .cruft.json  ARCHITECTURE_DIAGRAMS.md  CHANGES_SUMMARY.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  REFERENCE_CARD.md  START_HERE.md  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
docs/how_to/: hierarchical_data_parser.md
docs/reference/: hierarchical_design.md
src/nomad_plugin_images/apps/: __init__.py
src/nomad_plugin_images/parsers/: __init__.py  hierarchical_parser.py  image_parser.py  manifest_parser.py
src/nomad_plugin_images/schema_packages/: __init__.py  image_analysis.py  schema_package_old.py
tests/apps/: test_app.py
tests/data/: CuSnZnS_36.json  CuSnZnS_39.json  CuSnZnS_40.json  CuSnZnS_41.json  CuSnZnS_46.json  CuSnZnS_50.json  CuSnZnS_51.json  CuSnZnS_52.json  Sample-datasheet-master(Experimental conditions).csv  Sample-datasheet-master(XRF-analysis).csv  exp_0_manifest.csv  test.archive.yaml
tests/data/20260323_133255/: metadata.json
tests/data/20260323_133521/: metadata.json
tests/data/CuSnZnS_31_123456/: CuSnZnS_31.json
tests/data/CuSnZnS_32_123456/: CuSnZnS_32.json
tests/parsers/: test_hierarchical_parser.py  test_image_parser.py  test_manifest_parser.py
tests/schema_packages/: test_schema_package.py
tools/: simulate_upload.py
